# glimt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: autostart.rs  capture.rs  config.rs  encode_gif.rs  encode_mp4.rs  export.rs  hotkey.rs  main.rs  overlay.rs  picker.rs  pill.rs  record.rs  single_instance.rs  tray.rs
tools/: make_brand.py  make_icon.py
