[package]
name = "glimt"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.104"
arboard = "3.6.1"
auto-launch = "0.6.0"
chrono = "0.4.45"
dirs = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
global-hotkey = "0.8.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tiny-skia = "0.12.0"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }

[build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = "z"
lto = true
strip = true
